Fixed some errors and aligned statistics and history photos

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -599,14 +599,30 @@ button[type="submit"]:hover.send-form {
   font-size: 14px;
 }
 
+.lipa-content h1.history {
+  margin-bottom: 50px;
+}
+
+.lipa-content div.services-table {
+  margin-bottom: 50px;
+}
+
+/*--------------------------------------------------------------
+# Statistics Section
+--------------------------------------------------------------*/
+
 /* #statistics {
   width: 100%;
   height: 100%;
   margin-top: 100px;
 } */
 
+#statistics row {
+  padding: 0 0 0 0;
+}
+
 #statistics img.stat {
-  max-height: 300px;
+  width: 100%;
 }
 
 /*--------------------------------------------------------------
